# ITMO

android-kotlin/BEERIN-HW3-main/app/: build.gradle.kts
comp-arch/hw1/: a.out  start.bat  statement.md  ternary_logic.v  ternary_logic_tester.v
comp-arch/hw2/: a.out  dump.vcd  statement.md  templates.v
comp-arch/hw3/: a.out  dump.vcd  hw3.7z  memory.v  mips_cpu.v  statement.md  util.v
comp-arch/kr1/: a.out  first.v  second.v
cpp/ct-c24-hw-quaternion-NikolaySkladnev/: CMakeLists.txt  quat.hpp
cpp/ct-c24-lw-containers-NikolaySkladnev-main/: bucket_iterators.hpp  bucket_iterators_realization.hpp  bucket_storage.hpp  bucket_storage_realization.hpp
cpp/ct-c24-lw-floating-point-NikolaySkladnev/: CMakeLists.txt  FloatTest.java  constants.h  cream.py  functions.h  main.c
cpp/ct-c24-lw-libraries-NikolaySkladnev/: CMakeLists.txt  additional_functions.c  additional_functions.h  ffmpeg_functions.c  ffmpeg_functions.h  fftw_functions.c  fftw_functions.h  main.c
cpp/ct-c24-lw-minesweeper-NikolaySkladnev-main/: Minesweeper.pro  main.cpp  mainwindow.cpp  mainwindow.h  settingWindow.cpp  settingWindow.h
go-2025/gonature1-asm-NikolaySkladnev/internal/search/: todo.s
go-2025/gonature1-asm-NikolaySkladnev/internal/sequence/: todo.s
go-2025/gonature1-asm-NikolaySkladnev/internal/slices/: todo.s
go-2025/gonature1-concrypto-NikolaySkladnev/: go.mod
go-2025/gonature1-concrypto-NikolaySkladnev/internal/cardcrypter/: encrypt.go
go-2025/gonature1-confibgen-NikolaySkladnev/: go.mod
go-2025/gonature1-confibgen-NikolaySkladnev/internal/fibgen/: generator.go
go-2025/gonature1-digest/internal/digest/: main.go
go-2025/gonature1-factorization-NikolaySkladnev/internal/fact/: fact.go
go-2025/gonature1-lfucache-NikolaySkladnev/internal/lfucache/: lfucache.go
go-2025/gonature1-lfucache-NikolaySkladnev/internal/linkedlist/: list.go
go-2025/the_nature_of_go_programming-main/: .gitignore
go-2025/the_nature_of_go_programming-main/01_intro/001_install_go/: README.md
go-2025/the_nature_of_go_programming-main/01_intro/002_tooling/: main  main.go  main_test.go  run
go-2025/the_nature_of_go_programming-main/01_intro/003_project_structure/: go.mod
go-2025/the_nature_of_go_programming-main/01_intro/004_numeric_types/: 01_all.go  02_integer.go  03_float.go  04_complex.go  05_arithmetic.go  06_explicit_conversion.go
go-2025/the_nature_of_go_programming-main/01_intro/005_boolean_types/: 01_boolean.go
go-2025/the_nature_of_go_programming-main/01_intro/006_pointer_types/: 01_pointers.go  02_uintptr.go
go-2025/the_nature_of_go_programming-main/01_intro/007_array_types/: 01_arrays.go
go-2025/the_nature_of_go_programming-main/01_intro/008_slice_types/: 01_slices.go  02_byte.go  03_slice_internal.go
go-2025/the_nature_of_go_programming-main/01_intro/009_string_types/: 01_string_literals.go  02_runes.go
go-2025/the_nature_of_go_programming-main/01_intro/011_zero_value/: 01_zero_value.go
go-2025/the_nature_of_go_programming-main/01_intro/014_default_type/: 01_default_type.go
go-2025/the_nature_of_go_programming-main/04_asm/: go.mod
meth-opts/lab1/: gradient_descent.py  one_dimention_search.py
meth-opts/lab3/: Dop1.ipynb  Dop2.ipynb
os-bash/bash-intro-NikolaySkladnev-master/: emails.bash  frequently.bash  home.bash  log1.bash  log2.bash  modification.bash  prefix.bash  robot.bash  strings.bash  users.bash
os-bash/experiment-NikolaySkladnev-master/scripts/: find2.bash  mem.bash  mem2.bash  newmem.bash  run12.bash  run2.bash
os-bash/files-NikolaySkladnev-master/: backup.bash  rmtrash.bash  untrash.bash  upback.bash
os-bash/process-control-NikolaySkladnev-master/: 1_datetime.bash  2_repeat_datetime.bash  3_total_repeat_datetime.bash  4_limitations.bash  5_handler.bash  5_launcher.bash  5_producer.bash  6_handler.bash  6_launcher.bash  6_producer.bash  modification_handler.bash  modification_launcher.bash  modification_producer.bash
os-bash/process-monitor-NikolaySkladnev-master/: 1_users_processes.bash  2_from_sbin.bash  3_pid_of_last.bash  4_cpu_burst.bash  5_avg_run_child_or_parent.bash  6_the_fattest_one.bash  7_io.bash  modification.bash
paradigms/clojure-solutions/: expression.clj  linear.clj  parser.clj
paradigms/java-solutions/expression/: AND.java  AbstractBinaryOperations.java  AbstractUnaryOperation.java  Add.java  Const.java  Divide.java  GeneralInterface.java  L_Zeroes.java  Multiply.java  Negate.java  OR.java  R_Zeroes.java  Subtract.java  Variable.java  XOR.java
paradigms/java-solutions/queue/: AbstractQueue.java  ArrayQueue.java  ArrayQueueADT.java  ArrayQueueModule.java  LinkedQueue.java  Queue.java
paradigms/java-solutions/search/: BinarySearch.java  BinarySearchClosestD.java
paradigms/javascript-solutions/: functionalExpression.js  objectExpression.js
paradigms/prolog-solutions/: expression.pl  primes.pl  tree-map.pl
prog-intro/java-solutions/: OwnScanner.java  Reverse.java  ReverseMinR.java  ReverseMinRAbc.java  Sum.java  SumDouble.java  WordStatCountPrefixL.java  WordStatInput.java  Wspp.java  WsppPosition.java
prog-intro/java-solutions/expression/: AND.java  AbstractBinaryOperations.java  Add.java  Const.java  Divide.java  GeneralInterface.java  Main.java  Multiply.java  Negate.java  OR.java  Subtract.java  Variable.java
prog-intro/java-solutions/game/: Game.java  HumanPlayer.java  Main.java  Move.java  Olympiad.java  RandomPlayer.java  SequentialPlayer.java  TicTacToeBoard.java
prog-intro/java-solutions/markup/: Emphasis.java  Functions.java  Interface.java  Paragraph.java  Strikeout.java  Strong.java  Text.java
prog-intro/java-solutions/md2html/: Md2Html.java  Parser.java
t-bank/lesson-1/: .golangci.yaml  go.mod
t-bank/lesson-1/cmd/: main.go
t-bank/lesson-1/fizzbuzz/: fizzbuzz_test.go
t-bank/lesson-2/: README.md  go.mod
t-bank/lesson-2/tagcloud/: specification.go
t-bank/lesson-5/storage/: dir_sizer.go
t-bank/lesson-6/: README.md  go.mod  go.work.sum
t-bank/lesson-6/api/: swagger.yaml
t-bank/lesson-6/validator/: validator.go
t-bank/lesson-7/homework/: validator.go  validator_slice_test.go  validator_test.go
(+258 files in other folders)
